Fix: force horizontal scrolling of syntax-highlighted text that is too long

--- a/src/ishi/10-typography/styles/_highlight.scss
+++ b/src/ishi/10-typography/styles/_highlight.scss
@@ -1,6 +1,12 @@
 figure.highlight {
+    pre {
+        overflow-x: auto;
+    }
+
     code {
         background-color: inherit;
+        white-space: pre;
+        overflow-wrap: normal;
 
         span.lineno {
             border-right: 1px solid $panel-border-color;
